--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,107 @@
-# node
+# ====================================
+# NODE e DEPENDÊNCIAS
+# ====================================
 node_modules/
-
-# build
-dist/
-
-# env (MUITO IMPORTANTE)
-.env
-backend/.env
-frontend/.env
-frontend/.env.local
-frontend/.env.production
-
-# logs
+frontend/node_modules/
+backend/node_modules/ (se existir)
 npm-debug.log*
 yarn-debug.log*
+yarn-error.log*
+.pnp
+.pnp.js
+.yarn/install-state.gz
+.yarn/cache
+
+# ====================================
+# BUILD e DISTRIBUIÇÃO
+# ====================================
+dist/
+frontend/dist/
+backend/dist/ (se existir)
+build/
+out/
+.next/
+.cache/
+
+# ====================================
+# VARIÁVEIS DE AMBIENTE (CRÍTICO!)
+# ====================================
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+frontend/.env*
+backend/.env* (se existir)
+!.env.example
+.env.production
+
+# ====================================
+# SISTEMA e EDITORES
+# ====================================
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# ====================================
+# LOGS e CACHE
+# ====================================
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+coverage/
+.nyc_output/
+
+# ====================================
+# TESTES e COBERTURA
+# ====================================
+coverage/
+*.lcov
+.nyc_output
+
+# ====================================
+# DOCKER (se usar)
+# ====================================
+docker-compose.override.yml
+.dockerignore
+
+# ====================================
+# SISTEMA OPERACIONAL
+# ====================================
+# Windows
+Thumbs.db
+Desktop.ini
+
+# Mac
+.DS_Store
+
+# Linux
+*~
+
+# ====================================
+# PROJETOS ESPECÍFICOS
+# ====================================
+# Vite
+frontend/.env
+frontend/.env.local
+frontend/.env.production.local
+frontend/.env.development.local
+
+# Package managers
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
